--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,6 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: dplyr, mlr, sva, stringr, igraph, randomForest
+Imports: dplyr, mlr, sva, stringr, igraph, randomForest,optparse,synapser
 NeedsCompilation: no
 Packaged: 2019-03-15 20:44:21 UTC; xliu23
