--- a/cwl/imm-test.yml
+++ b/cwl/imm-test.yml
@@ -1,8 +1,6 @@
-synapse_config:
-  class: File
-  path: /home/sgosline/.synapseConfig
-input-file: syn18497731
 output-name: saratest
-output-id: syn18496218
 prob_unknown: 0
-
+input_path:
+  class: File
+  path: immClassifierTestMatrix.tsv
+out-name: testOutput
